# Computational-Governance

./: .gitignore  README.md  pyproject.toml
src/cgc/: __init__.py  engine.py
src/cgc/authority/: __init__.py  capability_network.py  projection.py
src/cgc/foundation/: __init__.py  artifact.py  observability.py  registry.py  task_state.py
src/cgc/governance/: __init__.py  constitution.py  discipline.py  elevation.py  feedback.py  reputation.py
src/cgc/models/: __init__.py  agent.py  capability.py  governance.py  messages.py  task.py
src/cgc/relay/: __init__.py  dispatcher.py  message_bus.py
tests/: test_authority.py  test_engine.py  test_foundation.py  test_governance.py  test_models.py  test_relay.py
